[package]
name = "carquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
cid = "0.9"
iroh-car = "0.2.0"
libipld = "0.15.0"
parquet = "37.0.0"
tokio = { version = "1.27.0", features = ["full"] }
